--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,24 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  display: grid;
-  place-items: center;
-  min-height: 100vh;
 }
+section::before {
+  content: "";
+  position: absolute;
+  width: 400px;
+  height: 400px;
+  background: linear-gradient(#ffc107, #e91c63);
+  border-radius: 50%;
+  transform: translate(-250px, -120px);
+}
+section::after {
+  content: "";
+  position: absolute;
+  width: 340px;
+  height: 340px;
+  background: linear-gradient(#2196f3, #31ff38);
+  border-radius: 50%;
+  transform: translate(250px , 150px);
+}
+
+.container {}
