added some style on month and date

--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,45 @@ section::after {
   height: 340px;
   background: linear-gradient(#2196f3, #31ff38);
   border-radius: 50%;
-  transform: translate(250px , 150px);
+  transform: translate(250px, 150px);
 }
 
-.container {}
+.react-calendar__month-view__weekdays__weekday {
+  color: wheat;
+  margin-bottom: 13px;
+}
+.react-calendar__month-view__weekdays__weekday abbr {
+  text-decoration: none;
+  padding: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  border-radius: 15px;
+}
+
+.react-calendar__month-view__weekdays__weekday:hover,
+.react-calendar__month-view__days__day:hover {
+  background: rgba(255, 255, 255, 0.5);
+  transition: 0.5s;
+  border-radius: 15px;
+}
+.react-calendar__month-view__weekdays__weekday:hover abbr {
+  transition: 0.3s;
+  color: black;
+}
+
+.react-calendar__month-view__weekdays__weekday--current {
+  background: white;
+  color: black;
+  padding: 12px;
+  transition: 0.5s;
+  border-radius: 15px;
+}
+
+.react-calendar__month-view__days__day{
+  padding: 10px;
+ }
+.react-calendar__month-view__days__day--neighboringMonth{
+  color: rgba(202, 202, 202, 0.67);
+}
