--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,34 @@ section::after {
   transform: translate(250px, 150px);
 }
 
+.react-calendar__navigation {
+  display: flex;
+  justify-content: center;
+  padding: 25px 5px;
+  font-weight: 600;
+  font-size: 28px;
+}
+.react-calendar__navigation__arrow{
+  padding: 10px;
+  margin: 0 15px;
+  
+}
+.react-calendar__navigation__arrow:hover{
+  background: rgba(255, 255, 255, 0.5);
+  transition: 0.5s;
+  border-radius: 15px;
+  color: black;
+
+}
+.react-calendar__navigation__arrow:active{
+  background: rgba(255, 255, 255, 0.5);
+  transition: 0.5s;
+  border-radius: 15px;
+  color: black;
+  transform: scale(0.8) ;
+
+}
+
 .react-calendar__month-view__weekdays__weekday {
   color: wheat;
   margin-bottom: 13px;
@@ -51,6 +79,7 @@ section::after {
   background: rgba(255, 255, 255, 0.5);
   transition: 0.5s;
   border-radius: 15px;
+  color: black;
 }
 .react-calendar__month-view__weekdays__weekday:hover abbr {
   transition: 0.3s;
@@ -65,9 +94,14 @@ section::after {
   border-radius: 15px;
 }
 
-.react-calendar__month-view__days__day{
-  padding: 10px;
- }
-.react-calendar__month-view__days__day--neighboringMonth{
+.react-calendar__month-view__days__day {
+  padding: 12px;
+}
+.react-calendar__tile--active {
+  background: rgba(209, 208, 208, 0.778);
+  border-radius: 15px;
+  color: black;
+}
+.react-calendar__month-view__days__day--neighboringMonth {
   color: rgba(202, 202, 202, 0.67);
 }
